# eco32-newlib

./: config.sub  configure  configure.ac
libgloss/: configure.in
libgloss/eco32/: Makefile.in  _exit.c  close.c  config.h.in  configure  configure.in  crt0.s  end.s  errno.c  execve.c  fork.c  fstat.c  getpid.c  isatty.c  kill.c  link.c  lseek.c  open.c  read.c  sbrk.c  stat.c  times.c  unlink.c  wait.c  write.c
newlib/: configure.host
newlib/libc/: configure
newlib/libc/include/machine/: ieeefp.h  setjmp.h
newlib/libc/machine/: configure  configure.in
newlib/libc/machine/eco32/: configure  setjmp.S
